--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -20,6 +20,9 @@
         color: rgb(248, 248, 248);
         font-size: 40px;
         justify-content: center;
+        background-color: rgba(0, 0, 0, 0.641);
+        border-radius: 15%;
+        
     }
 
     input {
